Mise en place du bootstrap pour le front office

--- a/silex/front_office/app/components/affecterHeure/affecterHeure.html
+++ b/silex/front_office/app/components/affecterHeure/affecterHeure.html
@@ -1,7 +1,8 @@
 <h1>Affecter Heure</h1>
 <form>
-  <label>Prof :</label><input /><br />
-  <label>Enseignement :</label><input /><br />
-  <label>Type :</label><input /><br />
-  <label>Nombre d'heure :</label><input />
+  <label for="prof">Prof : </label><input id="prof" type="text" /><br />
+  <label for="enseignement">Enseignement : </label><input id="enseignement" type="text" /><br />
+  <label for="type">Type : </label><input id="type" type="text" /><br />
+  <label for="heure">Nombre d'heure : </label><input id="heure" type="text" /><br />
+  <input id="submit" type="submit" />
 </form>
