--- a/silex/front_office/app/components/vueGlobale/vueGlobale.html
+++ b/silex/front_office/app/components/vueGlobale/vueGlobale.html
@@ -1,1 +1,7 @@
 <h1>Vue globale</h1>
+  <div class="col-sm-6">
+    Liste des heures :
+  </div>
+  <div class="col-sm-6">
+    Heure affecté :
+  </div>
