add deco statu affecterHeure

--- a/silex/front_office/app/shared/navbar/navbar.component.css
+++ b/silex/front_office/app/shared/navbar/navbar.component.css
@@ -16,8 +16,17 @@ nav a {
   text-decoration: none;
   vertical-align: middle;
   cursor: pointer;
+
+}
+
+
+.surligne:hover {
+  color: black;
+  border-color: orange;
+
 }
 
 nav a.router-link-active {
   color: #106cc8;
 }
+
