--- a/silex/front_office/app/components/affecterHeure/affecterHeure.html
+++ b/silex/front_office/app/components/affecterHeure/affecterHeure.html
@@ -1,8 +1,20 @@
 <h1>Affecter Heure</h1>
-<form>
-  <label for="prof">Prof : </label><input id="prof" type="text" /><br />
-  <label for="enseignement">Enseignement : </label><input id="enseignement" type="text" /><br />
-  <label for="type">Type : </label><input id="type" type="text" /><br />
-  <label for="heure">Nombre d'heure : </label><input id="heure" type="text" /><br />
-  <input id="submit" type="submit" />
-</form>
+  <div class="col-sm-4">
+		<form role="form">
+    		<div class="form-group">
+        		<input id="searchinput" class="form-control" type="search" placeholder="Rechercher un prof" />
+    		</div>
+    		<div id="searchlist" class="list-group">
+        		<p>Dimitri Sagnier </p> 
+        		<p>Agbani Mohamed </p> 
+    		</div>
+		</form> 
+ </div>
+ 
+  <div class="col-sm-4">
+    Heure affecté :
+  </div>
+ 
+
+
+
