--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <a routerLink= "/vueGlobale">vue global</a>
-  <a routerLink= "/planningProf">planning</a>
-  <a routerLink= "/affecterHeure">affecter heure</a>
-  <a routerLink= "/listeHeureAffecter">liste des heures affecté</a>
-  <a routerLink= "/description">description</a>
+  <a routerLink= "/vueGlobale"   [routerLinkActive]="['router-link-active']" class = "surligne" >vue global</a>
+  <a routerLink= "/planningProf"  [routerLinkActive]="['router-link-active']" class = "surligne">planning</a>
+  <a routerLink= "/affecterHeure"  [routerLinkActive]="['router-link-active']" class = "surligne" >affecter heure</a>
+  <a routerLink= "/listeHeureAffecter" [routerLinkActive]="['router-link-active']" class = "surligne" >liste des heures affecté</a>
+  <a routerLink= "/description"  [routerLinkActive]="['router-link-active']" class = "surligne">description</a>
 </nav>
