--- a/silex/front_office/app/shared/toolbar/toolbar.component.css
+++ b/silex/front_office/app/shared/toolbar/toolbar.component.css
@@ -6,7 +6,7 @@
   padding: 0 16px;
 }
 
-h1 {
+h1  {
   display: inline;
   font-size: 20px;
   font-weight: normal;
@@ -14,10 +14,8 @@ h1 {
   line-height: 48px;
 }
 
-.more {
-  background: url("./assets/svg/more.svg");
-  float: right;
-  height: 24px;
-  margin-top: 12px;
-  width: 24px;
+.deco, .statut {
+  color:white; 
+  margin-top: 13px;
 }
+
