--- a/silex/front_office/app/components/vueGlobale/vueGlobale.html
+++ b/silex/front_office/app/components/vueGlobale/vueGlobale.html
@@ -1,8 +1,54 @@
 <h1>Vue globale</h1>
-  <div class="col-sm-6">
+<div class="col-md-12 col-md-offset-3">
+  <div class="col-sm-3">
     Liste des heures :
+  		<ul class="list-group">
+  			<li class="list-group-item">
+    			 <span class="tag tag-default tag-pill float-xs-right">14</span>
+    			Cras justo odio
+ 			 </li>
+  			<li class="list-group-item">
+   				 <span class="tag tag-default tag-pill float-xs-right">2</span>
+  			    Dapibus ac facilisis in
+			</li>
+ 		    <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+  			 <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+  			 <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+		</ul>
   </div>
-  <div class="col-sm-6">
+
+  <div class="col-sm-3 ">
     Heure affecté :
+    <ul class="list-group">
+  			<li class="list-group-item">
+    			 <span class="tag tag-default tag-pill float-xs-right">14</span>
+    			Cras justo odio
+ 			 </li>
+  			<li class="list-group-item">
+   				 <span class="tag tag-default tag-pill float-xs-right">2</span>
+  			    Dapibus ac facilisis in
+			</li>
+ 		    <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+  			 <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+  			 <li class="list-group-item">
+    			<span class="tag tag-default tag-pill float-xs-right">1</span>
+    			Morbi leo risus
+  			</li>
+		</ul>
   </div>
- 
+</div> 
