changement vueglobale to accueil

--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a routerLink= "/vueGlobale"   [routerLinkActive]="['router-link-active']" class = "surligne" >vue global</a>
+  <a routerLink= "/accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >accueil</a>
   <a routerLink= "/planningProf"  [routerLinkActive]="['router-link-active']" class = "surligne">planning</a>
   <a routerLink= "/affecterHeure"  [routerLinkActive]="['router-link-active']" class = "surligne" >affecter heure</a>
   <a routerLink= "/listeHeureAffecter" [routerLinkActive]="['router-link-active']" class = "surligne" >liste des heures affecté</a>
