changement du menu

--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <nav>
   <a routerLink= "/accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >accueil</a>
-  <a routerLink= "/planningProf"  [routerLinkActive]="['router-link-active']" class = "surligne">planning</a>
-  <a routerLink= "/affecterHeure"  [routerLinkActive]="['router-link-active']" class = "surligne" >affecter heure</a>
-  <a routerLink= "/listeHeureAffecter" [routerLinkActive]="['router-link-active']" class = "surligne" >liste des heures affecté</a>
-  <a routerLink= "/description"  [routerLinkActive]="['router-link-active']" class = "surligne">description</a>
+  <a routerLink= "/interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">interventions</a>
+  <a routerLink= "/decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >décharges</a>
+  <a routerLink= "/responsableUE" [routerLinkActive]="['router-link-active']" class = "surligne" >responsable UE</a>
+  <a routerLink= "/recherche"  [routerLinkActive]="['router-link-active']" class = "surligne">recherche</a>
+  <a routerLink= "/listeDesUE"  [routerLinkActive]="['router-link-active']" class = "surligne">liste des UE</a>
 </nav>
