ajout tableau intervention

--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -5,4 +5,5 @@
   <a routerLink= "/responsableUE" [routerLinkActive]="['router-link-active']" class = "surligne" >responsable UE</a>
   <a routerLink= "/recherche"  [routerLinkActive]="['router-link-active']" class = "surligne">recherche</a>
   <a routerLink= "/listeDesUE"  [routerLinkActive]="['router-link-active']" class = "surligne">liste des UE</a>
+  <a routerLink= "/probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">probleme</a>
 </nav>
