--- a/silex/front_office/app/components/responsableUE/responsableUE.html
+++ b/silex/front_office/app/components/responsableUE/responsableUE.html
@@ -1,1 +1,30 @@
-<h1>responsableUE</h1>
+<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+            <tr> 
+                <th>N°UE   <span class="glyphicon glyphicon-sort"></span> </th> 
+                <th>Intitulé <span class="glyphicon glyphicon-sort"></span> </th> 
+                <th>Heures CM restantes <span class="glyphicon glyphicon-sort"></span></th>
+                <th>Heures TD restantes  <span class="glyphicon glyphicon-sort"></span></th>
+                <th>Heures TP restantes  <span class="glyphicon glyphicon-sort"></span></th>
+                <th>Edition</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>UE3201</td>
+                <td>Genie logiciel</td>
+                <td>25</td>
+                <td>12</td>
+                <td>0</td>
+                <td><a routerLink= "/ajoutProfUE" ><span class="glyphicon glyphicon-edit"></span></a> </td>
+            </tr>
+             <tr>
+                <td>UE3202</td>
+                <td>Triatement d'image</td>
+                <td>20</td>
+                <td>10.5</td>
+                <td>4.5</td>
+                <td><a routerLink= "/ajoutProfUE" class = "surligne" ><span class="glyphicon glyphicon-edit"></span></a> </td>
+            </tr>
+        </tbody>
+    </table>
