--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav>
-  <a routerLink= "/accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >accueil</a>
-  <a routerLink= "/interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">interventions</a>
-  <a routerLink= "/decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >décharges</a>
-  <a routerLink= "/responsableUE" [routerLinkActive]="['router-link-active']" class = "surligne" >responsable UE</a>
-  <a routerLink= "/recherche"  [routerLinkActive]="['router-link-active']" class = "surligne">recherche</a>
-  <a routerLink= "/listeDesUE"  [routerLinkActive]="['router-link-active']" class = "surligne">liste des UE</a>
-  <a routerLink= "/probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">probleme</a>
+  <a routerLink= "accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >accueil</a>
+  <a routerLink= "interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">interventions</a>
+  <a routerLink= "decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >décharges</a>
+  <a routerLink= "responsableUE" [routerLinkActive]="['router-link-active']" class = "surligne" >responsable UE</a>
+  <a routerLink= "recherche"  [routerLinkActive]="['router-link-active']" class = "surligne">recherche</a>
+  <a routerLink= "listeDesUE"  [routerLinkActive]="['router-link-active']" class = "surligne">liste des UE</a>
+  <a routerLink= "probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">probleme</a>
 </nav>
