--- a/silex/front_office/app/shared/toolbar/toolbar.component.html
+++ b/silex/front_office/app/shared/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
-<h1>Dimitri Sagnier</h1>
+<h1>Armel Prigent</h1>
 <a class="deco pull-right glyphicon glyphicon-log-out">Deconnexion</a>
-<span class="statut col-md-offset-1 glyphicon glyphicon-pencil">Statut:</span>
+<span class="statut col-md-offset-1 glyphicon glyphicon-pencil">Statut: </span> <span>Maitre de conference</span>
 
 
 
