--- a/silex/front_office/app/components/responsableUE/responsableUE.html
+++ b/silex/front_office/app/components/responsableUE/responsableUE.html
@@ -1,8 +1,9 @@
-<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+<div *ngIf="getData">
+    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
-            <tr> 
-                <th>N°UE   <span class="glyphicon glyphicon-sort"></span> </th> 
-                <th>Intitulé <span class="glyphicon glyphicon-sort"></span> </th> 
+            <tr>
+                <th>N°UE   <span class="glyphicon glyphicon-sort"></span> </th>
+                <th>Intitulé <span class="glyphicon glyphicon-sort"></span> </th>
                 <th>Heures CM restantes <span class="glyphicon glyphicon-sort"></span></th>
                 <th>Heures TD restantes  <span class="glyphicon glyphicon-sort"></span></th>
                 <th>Heures TP restantes  <span class="glyphicon glyphicon-sort"></span></th>
@@ -10,6 +11,12 @@
             </tr>
         </thead>
         <tbody>
+            <tr *ngFor="let car of getData.data">
+                <td>{{car.brand}}</td>
+                <td>{{car.year}}</td>
+                <td>{{car.color}}</td>
+                <td>{{car.vin}}</td>
+            </tr>
             <tr>
                 <td>UE3201</td>
                 <td>Genie logiciel</td>
@@ -28,3 +35,4 @@
             </tr>
         </tbody>
     </table>
+</div>
