--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav>
-  <a routerLink= "accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >accueil</a>
-  <a routerLink= "interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">interventions</a>
-  <a routerLink= "decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >décharges</a>
-  <a routerLink= "responsableUE" [routerLinkActive]="['router-link-active']" class = "surligne" >responsable UE</a>
-  <a routerLink= "recherche"  [routerLinkActive]="['router-link-active']" class = "surligne">recherche</a>
-  <a routerLink= "listeDesUE"  [routerLinkActive]="['router-link-active']" class = "surligne">gérer UE</a>
-  <a routerLink= "probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">probleme</a>
+  <a routerLink= "accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >Accueil</a>
+  <a routerLink= "interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">Interventions</a>
+  <a routerLink= "decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >Décharges</a>
+  <a routerLink= "probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">Probleme</a>
+  <a routerLink= "gererPersonnel" [routerLinkActive]="['router-link-active']" class = "surligne" >Gérer Personnel</a>
+  <a routerLink= "gererUE" [routerLinkActive]="['router-link-active']" class = "surligne" >Gérer UE</a>
+  <a routerLink= "gererStatuts"  [routerLinkActive]="['router-link-active']" class = "surligne">Gérer Statuts</a>
+  <a routerLink= "gererDroits"  [routerLinkActive]="['router-link-active']" class = "surligne">Gérer Droits</a>
 </nav>
