modification tableau gerer ue

--- a/silex/front_office/app/components/accueil/accueil.html
+++ b/silex/front_office/app/components/accueil/accueil.html
@@ -29,3 +29,17 @@
 </div>
 
 
+<div class="col-xs-12 col-sm-5 col-md-4 col-lg-6">
+  <div class="progress">
+    <div class="progress-bar progress-bar-success" role="progressbar" style="width:40%">
+      50h TP
+    </div>
+    <div class="progress-bar progress-bar-warning" role="progressbar" style="width:10%">
+      50h TD
+    </div>
+    <div class="progress-bar progress-bar-danger" role="progressbar" style="width:20%">
+      50h CM
+    </div>
+   
+  </div>
+</div>
