--- a/silex/front_office/app/components/gererUE/gererUE.html
+++ b/silex/front_office/app/components/gererUE/gererUE.html
@@ -1,5 +1,8 @@
-<div class="span3">
+<h1>liste des ue (secretaire) </h1>
   <h2>UE Genie logiciel</h2>
+
+<div class="col-xs-12 col-sm-5 col-md-4 col-lg-9">
+<div class="span3">
 <table class="table table-striped">
   <thead>
     <tr>
@@ -9,7 +12,7 @@
       <th>Heures CM</th>
       <th>Heures TD</th>
       <th>Heures TP</th>
-      <th> Modifier heures</th>
+      <th> Fiche professeur</th>
       <th><span class="glyphicon glyphicon-plus"></span></th>
     </tr>
   </thead>
@@ -22,7 +25,7 @@
       <td>0</td>
       <td>6</td>
       <td>8</td>
-      <td> <a routerLink= "/#" >Editer</a></td>
+      <td> <span class="glyphicon glyphicon-eye-open"></span></td>
       <td> <span class="glyphicon glyphicon-remove"></span> </td>
     </tr>
 
@@ -33,7 +36,7 @@
       <td>0</td>
       <td>0</td>
       <td>8</td>
-      <td> <a routerLink= "/#" >Editer</a></td>
+      <td> <span class="glyphicon glyphicon-eye-open"></span></td>
       <td> <span class="glyphicon glyphicon-remove"></span> </td>
     </tr>
  <tr>
@@ -43,7 +46,7 @@
       <td>10</td>
       <td>6</td>
       <td>8</td>
-      <td> <a routerLink= "/#" >Editer</a></td>
+      <td> <span class="glyphicon glyphicon-eye-open"></span></td>
       <td> <span class="glyphicon glyphicon-remove"></span> </td>
     </tr>
 
@@ -54,10 +57,30 @@
       <td>0</td>
       <td>0</td>
       <td>8</td>
-      <td> <a routerLink= "/#" >Editer</a></td>
+      <td> <span class="glyphicon glyphicon-eye-open"></span></td>
       <td> <span class="glyphicon glyphicon-remove"></span> </td>
     </tr>
   </tbody>
 </table>
 
 </div>
+</div>
+
+
+
+<div class="col-xs-12 col-sm-5 col-md-4 col-lg-3">
+          <div id="custom-search-input">
+            <div class="input-group col-md-12">
+              <input id="search" type="text" class="form-control input-lg" placeholder="Search" />
+              <span class="input-group-btn">
+                <button class="btn btn-info btn-lg" type="button">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </span>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item">Genie logiciel</li>
+              <li class="list-group-item">Technique de programmation</li>
+            </ul>
+          </div>
+</div>  
