--- a/silex/front_office/app/components/interventions/interventions.html
+++ b/silex/front_office/app/components/interventions/interventions.html
@@ -1,30 +1,36 @@
-<h1>interventions </h1>
-
-<div class ="lead"> nombre d'heures total: 6+8 </div>
-<div class ="lead"> nombre d'heures restant: 350 - 14 </div>
+<h1>Interventions</h1>
 
 <div *ngIf="getData">
+  <div class ="lead"> nombre d'heures total: {{getData.heureTotal}} </div>
+  <div class ="lead"> nombre d'heures restant: {{getData.heureRestant}} </div>
+
   <div class="table-responsive">
     <table class="table table-condensed table-striped table-bordered table-hover no-margin">
       <thead>
         <tr>
-          <th style="width:15%">Nom module</th>
-          <th style="width:15%">Nom responsable</th>
-          <th style="width:10%" class="hidden-phone">Type cours</th>
-          <th style="width:15%" class="hidden-phone">Nombre d'heures</th>
-          <th style="width:15%" class="hidden-phone">Date attribution</th>
+          <th style="width:7%">N° UE</th>
+          <th style="width:11%">Intitulé</th>
+          <th style="width:11%" class="hidden-phone">Nom Responsable</th>
+          <th style="width:11%" class="hidden-phone">Heures CM</th>
+          <th style="width:11%" class="hidden-phone">Heures TD</th>
+          <th style="width:11%" class="hidden-phone">Heures TP</th>
+          <th style="width:11%" class="hidden-phone">Date d'ajout</th>
+          <th style="width:11%" class="hidden-phone">Attribution par</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let car of getData.data">
-          <td>{{car.brand}}</td>
-          <td>{{car.year}}</td>
-          <td>{{car.color}}</td>
-          <td>{{car.vin}}</td>
+        <tr *ngFor="let intervention of getData.data">
+          <td>{{intervention.numUE}}</td>
+          <td>{{intervention.intitule}}</td>
+          <td>{{intervention.responsableUE}}</td>
+          <td>{{intervention.hCM}}</td>
+          <td>{{intervention.hTD}}</td>
+          <td>{{intervention.hTP}}</td>
           <td>
             <span class="label label label-info">New</span>
-            {{car.brand}}
+            {{intervention.date}}
           </td>
+          <td>{{intervention.attribution}}</td>
         </tr>
       </tbody>
     </table>
