--- a/silex/front_office/app/shared/navbar/navbar.component.html
+++ b/silex/front_office/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <a routerLink= "accueil"   [routerLinkActive]="['router-link-active']" class = "surligne" >Accueil</a>
   <a routerLink= "interventions"  [routerLinkActive]="['router-link-active']" class = "surligne">Interventions</a>
   <a routerLink= "decharges"  [routerLinkActive]="['router-link-active']" class = "surligne" >Décharges</a>
-  <a routerLink= "probleme"  [routerLinkActive]="['router-link-active']" class = "surligne">Probleme</a>
+  <a routerLink= "problemes"  [routerLinkActive]="['router-link-active']" class = "surligne">Problèmes</a>
   <a routerLink= "gererPersonnel" [routerLinkActive]="['router-link-active']" class = "surligne" >Gérer Personnel</a>
   <a routerLink= "gererUE" [routerLinkActive]="['router-link-active']" class = "surligne" >Gérer UE</a>
   <a routerLink= "gererStatuts"  [routerLinkActive]="['router-link-active']" class = "surligne">Gérer Statuts</a>
