--- a/silex/front_office/app/components/problemes/problemes.html
+++ b/silex/front_office/app/components/problemes/problemes.html
@@ -1,5 +1,5 @@
 <h1>Problèmes</h1>
-<div *ngIf="problemes" class="table-responsive">
+<div class="table-responsive">
   <table class="table table-condensed table-striped table-bordered table-hover no-margin">
     <thead>
       <tr>
@@ -8,7 +8,7 @@
         <th>Heures Manquants</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody *ngIf="problemes">
       <tr *ngFor="let probleme of problemes.problemes">
         <td>{{probleme.nom}} {{probleme.prenom}}</td>
         <td>{{probleme.statut}}</td>
