--- a/silex/front_office/app/components/decharges/decharges.html
+++ b/silex/front_office/app/components/decharges/decharges.html
@@ -1,18 +1,25 @@
 <h1>Décharges</h1>
-  <div class="col-sm-4">
-		<form role="form">
-    		<div class="form-group">
-        		<input id="searchinput" class="form-control" type="search" placeholder="Rechercher un prof" />
-    		</div>
-    		<div id="searchlist" class="list-group">
-        		<p>Dimitri Sagnier </p> 
-        		<p>Agbani Mohamed </p> 
-    		</div>
-		</form> 
- </div>
+<div class="table-responsive">
+    <table class="table table-condensed table-striped table-bordered table-hover no-margin">
+		<thead>
+			<tr>
+				<th>Raison</th>
+				<th>Nombre d'heures</th>
+			</tr>
+		</thead>
+		<tbody *ngIf="decharges">
+			<tr *ngFor="let decharges of decharges.decharges">
+				<td>{{decharges.raisonDecharge}}</td>
+				<td>{{decharges.temps}}</td>
+			</tr>
+		</tbody>
+    </table>
+</div>
  
   <div class="col-sm-4">
-    Heure affecté :
+    <p>Heure à affecter : 192H</p>
+	<p>Total décharge : </p>
+	<p>Heures à effecuter</p>
   </div>
  
 
