--- a/silex/front_office/app/components/gererPersonnel/gererPersonnel.html
+++ b/silex/front_office/app/components/gererPersonnel/gererPersonnel.html
@@ -6,8 +6,10 @@
   </div>
 </div>
 <div *ngIf="listePersonnel" class="col-md-4">
-  <ul *ngFor="let personnel of listePersonnel" (click)="getPersonnel(personnel.id)" class="list-group">
-    <li class="list-group-item">{{personnel.prenom}} {{personnel.nom}}</li>
+  <ul *ngFor="let personnel of listePersonnel" (click)="change()" class="list-group">
+    <a routerLink= "/gererPersonnel/{{personnel.id}}" [routerLinkActive]="['router-link-active']"  class = "surligne">
+      <li class="list-group-item">{{personnel.prenom}} {{personnel.nom}}</li>
+  </a>
   </ul>
 </div>
 
