--- a/silex/front_office/app/components/gererUE/gererUE.html
+++ b/silex/front_office/app/components/gererUE/gererUE.html
@@ -6,8 +6,10 @@
   </div>
 </div>
 <div *ngIf="listeUE" class="col-md-4">
-  <ul *ngFor="let UE of listeUE" (click)="getUE(UE.id)" class="list-group">
-    <li class="list-group-item">{{UE.numero}} {{UE.intitule}}</li>
+  <ul *ngFor="let UE of listeUE" (click)="change()" class="list-group">
+    <a routerLink= "/gererUE/{{UE.id}}" [routerLinkActive]="['router-link-active']"  class = "surligne">
+      <li class="list-group-item">{{UE.numero}} {{UE.intitule}}</li>
+    </a>
   </ul>
 </div>
 
