--- a/silex/front_office/app/components/gererUE/gererUE.html
+++ b/silex/front_office/app/components/gererUE/gererUE.html
@@ -2,7 +2,26 @@
 
 <div class="col-md-8">
   <div *ngIf="UE">
-    {{UE.numero}} {{UE.intitule}}
+    <div class="row" >
+		<div class="col-xs-12 col-sm-5 col-md-4 col-lg-6">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Titre de l'UE</th>
+						<th>Heures CM</th>
+						<th>Heures TD</th>
+						<th>Heures TP</th>
+					</tr>
+				</thead>
+					<tr>
+						<td>{{UE.numero}} : {{UE.intitule}}</td>
+						<td>{{UE.cm}}</td>
+						<td>{{UE.td}}</td>
+						<td>{{UE.tp}}</td>
+					</tr>
+			</table>
+		</div>
+	</div>
   </div>
 </div>
 <div *ngIf="listeUE" class="col-md-4">
