--- a/front_office/app/components/gererUE/gererUE.html
+++ b/front_office/app/components/gererUE/gererUE.html
@@ -3,7 +3,7 @@
 <div class="col-md-8">
   <div *ngIf="UE">
     <div class="row" >
-  		<div class="col-xs-12 col-sm-5 col-md-4 col-lg-6">
+  		<div class="col-md-12">
   			<table class="table table-striped">
   				<thead>
   					<tr>
