Création de la méthode httpPost

--- a/front_office/app/components/gererDroits/gererDroits.html
+++ b/front_office/app/components/gererDroits/gererDroits.html
@@ -1,4 +1,6 @@
 <h1>Gérer Droits</h1>
 <input id="input" type="text" size="30" pInputText [(ngModel)]="text" />
-<button (click)="getListeUE()">Test ton biftek</button>
-<p>Output : {{getData}}</p>
+<button (click)="getData()">Test ton biftek</button>
+<p>Output : {{value}}</p>
+
+<button (click)="postData()">Test ton PO PO PO POST</button>
