--- a/front_office/app/components/accueil/accueil.html
+++ b/front_office/app/components/accueil/accueil.html
@@ -1,39 +1,36 @@
-<div class="progress">
-  <div class="progress-bar progress-bar-success" role="progressbar" style="width:40%">
-    CM:
+<div class="progress" style="height:25px">
+  <div class="progress-bar progress-bar-success" role="progressbar" style="width:25%">
+    CM : 32h
   </div>
-  <div class="progress-bar progress-bar-warning" role="progressbar" style="width:10%">
-    50h TD
+  <div class="progress-bar progress-bar-warning" role="progressbar" style="width:25%">
+    TD : 48h
   </div>
-  <div class="progress-bar progress-bar-danger" role="progressbar" style="width:20%">
-    50h CM
+  <div class="progress-bar progress-bar-danger" role="progressbar" style="width:25%">
+    TP : 48h
   </div>
 </div>
 
 <div class="row space" >
-  <div class="col-xs-12 col-sm-5 col-md-4 col-lg-6">
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <h4>Vos dernières interventions</h4>
     <table class="table table-striped">
       <thead>
         <tr>
-          <th>N°UE</th>
           <th>Intitulé</th>
           <th>Heures</th>
         </tr>
       </thead>
       <tbody *ngIf="interventions">
         <tr *ngFor="let intervention of interventions.interventions">
-          <td>{{intervention.numUE}}</td>
-          <td>{{intervention.intitule}}</td>
+          <td>
+		  <span class="label label label-info">{{intervention.numUE}}</span>
+            {{intervention.intitule}}</td>
           <td>{{intervention.hCM+intervention.hTD+intervention.hTP}}</td>
         </tr>
       </tbody>
     </table>
   </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     <h4>Vos UE responsables</h4>
     <table class="table table-striped">
       <thead>
