--- a/front_office/app/components/gererDroits/gererDroits.html
+++ b/front_office/app/components/gererDroits/gererDroits.html
@@ -2,5 +2,9 @@
 <input id="input" type="text" size="30" pInputText [(ngModel)]="text" />
 <button (click)="getData()">Test ton biftek</button>
 <p>Output : {{value}}</p>
-
+<br />
+Link :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="link" />
+Value :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="data" />
 <button (click)="postData()">Test ton PO PO PO POST</button>
