--- a/front_office/app/components/problemes/problemes.html
+++ b/front_office/app/components/problemes/problemes.html
@@ -10,7 +10,7 @@
       </tr>
     </thead>
     <tbody *ngIf="problemes">
-      <tr *ngFor="let probleme of problemes.problemes">
+      <tr *ngFor="let probleme of problemes">
         <td>{{probleme.nom}} {{probleme.prenom}}</td>
         <td>{{probleme.statut}}</td>
         <td>{{probleme.heuresManquants}}</td>
