Fonctionnalité d'ajout d'un personnel

--- a/front_office/app/components/gererPersonnel/gererPersonnel.html
+++ b/front_office/app/components/gererPersonnel/gererPersonnel.html
@@ -89,4 +89,5 @@
       <li class="list-group-item">{{personnel.prenom}} {{personnel.nom}}</li>
     </a>
   </ul>
+	<button (click)="ajoutPersonnel()">Ajouter Personnel</button>
 </div>
