--- a/front_office/app/components/gererStatuts/gererStatuts.html
+++ b/front_office/app/components/gererStatuts/gererStatuts.html
@@ -1,22 +1,26 @@
 <h1>Gérer Statuts</h1>
 
-<div class="col-md-8">
+<div class="col-md-10">
 	<div *ngIf="statuts">
 		<div class="row">
 			<div class="col-md-12">
+				<h3>Nom du statut : {{statuts.label}}</h3>
+				<h4>Service annuel (TD/TP) : {{statuts.heures}}</h4>
+				<hr/>
+				<h4>Liste des personnes ayant ce statut :</h4>
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th>Nom du statuts</th>
-							<th>Heures à répartir</th>
-							<th>Autorisation</th>
+							<th>Nom</th>
+							<th>Prénom</th>
+							<th>Fiche Professeur</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td>{{statuts.label}}</td>
-							<td>{{statuts.heures}}</td>
-							<td>{{statuts.autorisation}}</td>
+							<td>Prigent</td>
+							<td>Armelle</td>
+							<td>BOUTON</td>
 						</tr>
 					</tbody>
 				</table>
@@ -25,7 +29,7 @@
 	</div>
 </div>
 
-<div *ngIf="listeStatuts" class="col-md-4">
+<div *ngIf="listeStatuts" class="col-md-2">
     <ul *ngFor="let statuts of listeStatuts" (click)="getStatuts(statuts.id)" class="list-group">
 		<a routerLink= "/gererStatuts/{{statuts.id}}" [routerLinkActive]="['router-link-active']" class="surligne">
 			<li class="list-group-item">{{statuts.label}}</li>
