Test pour ajouter un personnel

--- a/front_office/app/components/gererPersonnel/gererPersonnel.html
+++ b/front_office/app/components/gererPersonnel/gererPersonnel.html
@@ -89,5 +89,6 @@
       <li class="list-group-item">{{personnel.prenom}} {{personnel.nom}}</li>
     </a>
   </ul>
+	{{test}}
 	<button (click)="ajoutPersonnel()">Ajouter Personnel</button>
 </div>
