--- a/front_office/app/components/gererStatuts/gererStatuts.html
+++ b/front_office/app/components/gererStatuts/gererStatuts.html
@@ -1,38 +1,15 @@
 <h1>Gérer Statuts</h1>
-
 <div class="col-md-10">
-	<div *ngIf="statuts">
-		<div class="row">
-			<div class="col-md-12">
-				<h3>Nom du statut : {{statuts.label}}</h3>
-				<h4>Service annuel (TD/TP) : {{statuts.heures}}</h4>
-				<hr/>
-				<h4>Liste des personnes ayant ce statut :</h4>
-				<table class="table table-striped">
-					<thead>
-						<tr>
-							<th>Nom</th>
-							<th>Prénom</th>
-							<th>Fiche Professeur</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Prigent</td>
-							<td>Armelle</td>
-							<td>BOUTON</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-	</div>
+	<router-outlet></router-outlet>
 </div>
 
 <div *ngIf="listeStatuts" class="col-md-2">
-    <ul *ngFor="let statuts of listeStatuts" (click)="getStatuts(statuts.id)" class="list-group">
+    <ul *ngFor="let statuts of listeStatuts"  class="list-group">
 		<a routerLink= "/gererStatuts/{{statuts.id}}" [routerLinkActive]="['router-link-active']" class="surligne">
 			<li class="list-group-item">{{statuts.label}}</li>
 		</a>
     </ul>
+		<a routerLink= "/gererStatuts/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
+			test
+		</a>
 </div>
