Modification mineure sur gererStatuts

--- a/front_office/app/components/gererStatuts/gererStatuts.html
+++ b/front_office/app/components/gererStatuts/gererStatuts.html
@@ -5,11 +5,11 @@
 
 <div *ngIf="listeStatuts" class="col-md-2">
     <ul *ngFor="let statuts of listeStatuts"  class="list-group">
-		<a routerLink= "/gererStatuts/{{statuts.id}}" [routerLinkActive]="['router-link-active']" class="surligne">
-			<li class="list-group-item">{{statuts.label}}</li>
-		</a>
+			<a routerLink= "/gererStatuts/{{statuts.id}}" [routerLinkActive]="['router-link-active']" class="surligne">
+				<li class="list-group-item" >{{statuts.label}}</li>
+			</a>
     </ul>
 		<a routerLink= "/gererStatuts/ajouter" [routerLinkActive]="['router-link-active']" class="surligne">
-			test
+			Ajouter
 		</a>
 </div>
