Ajout de la méthode http delete avec le test & reparation de la méthode post dans le test

--- a/front_office/app/components/gererDroits/gererDroits.html
+++ b/front_office/app/components/gererDroits/gererDroits.html
@@ -8,3 +8,11 @@ Link :
 Value :
 <input id="input" type="text" size="30" pInputText [(ngModel)]="data" />
 <button (click)="postData()">Test ton PO PO PO POST</button>
+<br />
+<br />
+Link :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="deleteLink" />
+ID :
+<input id="input" type="text" size="30" pInputText [(ngModel)]="deleteID" />
+<button (click)="deleteData()">Delete au bout du monde</button>
+<p>Result : {{val}}</p>
